Fix RTL in collapse

--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,14 @@ body.jsenabled .course-content ul.ctopics li.section .content .toggle-arrow a.to
     background-image: url([[pix:format_topcoll|arrow_right]]);
 }
 
+body.jsenabled.dir-rtl .course-content ul.ctopics li.section .content .toggle-arrow a.toggle_closed { /* JavaScript enabled */
+    background-image: url([[pix:format_topcoll|arrow_left]]);
+    background-position: 100%;
+}
+body.jsenabled.dir-rtl .course-content ul.ctopics li.section .content .toggle-arrow a.toggle_open { /* JavaScript enabled */
+    background-position: 100%;
+}
+
 body.jsenabled .course-content ul.ctopics li.section .content .toggle-arrow a.toggle_open { /* JavaScript enabled */
     background-image: url([[pix:format_topcoll|arrow_down]]);
 }
